# manage-loser

./: README.md  asmPower.sh  bits.c  toGit.sh
backheer/: README.md  backheer.sh  configure
c/: decision.c  file_binary.c  file_struct.c  filec.c  files.c  huffman_codes.c  pipe.c  pipe_cmd.c
c/parallel/: .global.c.swp  Makefile  global.c  p-c.c  volatile.c  volatile.s
c/shell/: intro.sh
c/socket/: c  daycli.c  dayserv.c  s
cheerMake/: CMakeLists.txt  config.h  config.h.in  main.c
cheerMake/math/: CMakeLists.txt  mcheer.c  mcheer.h
gnu_chain/: Makefile  Makefile2  README.md
gnu_chain/src/: main.c  nothing.h
more/: see.c
ohMyDay/: f4ruby.c  queue  queue.c  queue.rb
quicksort/: README.md  qs.c
serial_port/: letMeReceive.c  letMeSend.c  simple_uart.c
todo/: Makefile  README.md  configure  todo.c  todo_queue.c  todo_queue.h
who/: who.c
